--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react-dom": "^18.0.11",
     "antd": "^5.2.2",
     "axios": "^1.3.4",
+    "d3-force": "^3.0.0",
+    "d3-scale": "^4.0.2",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
@@ -51,6 +53,9 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/d3-dispatch": "^3.0.2",
+    "@types/d3-force": "^3.0.4",
+    "@types/d3-scale": "^4.0.3",
     "@types/mockjs": "^1.0.7",
     "@types/react-grid-layout": "^1.3.2",
     "@types/react-router-dom": "^5.3.3",
