--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "mockjs": "^1.1.0",
+    "nanoid": "^3.3.6",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
