--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^3.3.6",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-redux": "^8.0.5",
