--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.2.2",
     "axios": "^1.3.4",
     "d3-force": "^3.0.0",
+    "d3-quadtree": "^3.0.1",
     "d3-scale": "^4.0.2",
     "mockjs": "^1.1.0",
     "nanoid": "^3.3.6",
@@ -57,6 +58,7 @@
     "@types/axios": "^0.14.0",
     "@types/d3-dispatch": "^3.0.2",
     "@types/d3-force": "^3.0.4",
+    "@types/d3-quadtree": "^3.0.2",
     "@types/d3-scale": "^4.0.3",
     "@types/mockjs": "^1.0.7",
     "@types/react-grid-layout": "^1.3.2",
